# MediaServer

./: .env  BoostConfig.cmake  CMakeLists.txt  README.md  docker-compose.yaml  main.cpp  router_test.txt  server.cc
cmd/: main.cc
config/: config.cpp  config.h  types.h
core/: core.cpp  core.h  thread_pool.cpp  thread_pool.h
env/: api.env  app.env  db.env
handlers/: handler.cpp  handler.h
net/: client.cpp  client.h  http_server.cpp  http_server.h  iconn.h  iconnection.h  iserver.h  server.cpp  server.h  session.cpp  session.h
net/api/: restapi.cpp  restapi.h
net/api/grpc/: client.cc  server.cc
net/api/rest/: handler.cpp  handler.h
net/grpc/: grpc_conn.cpp  grpc_conn.h
net/handler/: get_request_handler.cpp  get_request_handler.h  handler.h  handlers.h  irequest_handler.cpp  irequest_handler.h  post_request_handler.cpp  post_request_handler.h  request_wrapper.h  set_request_handler.cpp  set_request_handler.h
net/http/: connection.cpp  connection.h  http_conn.cpp  http_conn.h
net/http/api/: handler.cpp  handler.h
net/router/: router.cpp  router.h
net/session/: session.cpp  session.h
proto/: CMakeLists.txt
source/config/: config.cc  config.cpp  config.h  types.h
source/core/: core.cc  core.cpp  core.h  thread_pool.cc  thread_pool.h
source/http/: http_server.cpp  http_server.h
source/http/api/: restapi.cpp
source/http/api/handlers/: get_request_handler.h
source/http/router/: router.cpp
source/http/session/: session.cpp  session.h
source/net/grpc/: grpc_conn.cc  grpc_conn.h
source/net/http/: http_conn.h
source/net/http/api/: handler.h
source/net/router/: router.cc  router.h
source/net/session/: session.cc
source/proto/: CMakeLists.txt  storage.proto
source/service/: interface.h  iservice.h  provider.cc  provider.h
source/service/auth/: service.cc  service.h
static/html/: auth.html  files_list.html  index.html  main.html  register.html
static/js/: auth.js  login.js  register.js
tests/: test_grpc_server.cc
